--- a/CarProject/package.json
+++ b/CarProject/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-web": "~0.19.6",
+    "react-router-dom": "^6.16.0",
     "valid-url": "^1.0.9",
     "yup": "^1.2.0"
   },
