--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.13",
+    "expo-application": "~5.3.0",
+    "expo-auth-session": "~5.0.2",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.11",
+    "expo-random": "~13.2.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
     "firebase": "9.6.4",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-masked-view": "^0.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-auth-session": "~5.0.2",
-    "expo-crypto": "~12.4.1",
-    "expo-web-browser": "~12.3.2",
-    "expo-application": "~5.3.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "expo-dev-client": "~2.4.11",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
