--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "firebase": "9.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "^0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-masked-view": "^0.2.0",
