--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "expo": "~49.0.13",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-random": "~13.2.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
