Add library.js to fetch image from phone album

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-picker": "^14.5.0",
+    "expo-media-library": "^15.6.0",
     "expo-random": "~13.2.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -38,7 +39,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-gifted-chat": "^2.4.0",
-    "react-native-image-picker": "^7.0.1",
+    "react-native-image-picker": "^7.0.2",
     "react-native-masked-view": "^0.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
