--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
-    "expo-image-picker": "^14.5.0",
-    "expo-media-library": "^15.6.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
     "expo-random": "~13.2.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -35,14 +35,14 @@
     "firebase": "^9.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.13.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.0.2",
     "react-native-masked-view": "^0.2.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
