--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.20",
     "android": "^0.0.8",
     "dotenv": "^16.3.1",
     "expo": "~49.0.13",
