--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/firestore": "^18.5.0",
-    "@react-navigation/bottom-tabs": "^6.5.9",
-    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.20",
     "android": "^0.0.8",
@@ -34,18 +34,21 @@
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^9.6.4",
+    "link": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.0.2",
+    "react-native-maps": "^1.8.0",
     "react-native-masked-view": "^0.2.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
     "source-map-loader": "^4.0.1"
   },
