--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-web-browser": "~12.3.2",
     "firebase": "^9.6.4",
     "link": "^2.1.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.6",
