--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/firestore": "^18.5.0",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
@@ -46,6 +47,7 @@
     "react-native-maps": "^1.8.0",
     "react-native-masked-view": "^0.2.0",
     "react-native-modal": "^13.0.1",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
