--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.20",
     "android": "^0.0.8",
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "expo": "~49.0.13",
     "expo-application": "~5.3.0",
@@ -40,6 +41,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.6",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-gifted-chat": "^2.4.0",
