--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
+    "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
     "expo-random": "~13.2.0",
@@ -38,7 +39,7 @@
     "firebase": "^9.6.4",
     "link": "^2.1.0",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-element-dropdown": "^2.10.0",
