--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.0.3",
     "react-native-maps": "^1.8.0",
     "react-native-masked-view": "^0.2.0",
